# sigfeather

./: .gitmodules  LICENSE  Readme.md  sigfeather.code-workspace
device/: platformio.ini
device/include/: sigfeather_tusb_config.h
device/lib/protocol/: protocol.h
device/src/: main.cpp  samplePin.pio  samplePin.pio.h  sampler.cpp  sampler.h  usbinterface.cpp  usbinterface.h
host/: CMakeLists.txt
host/libsigfeather/: CMakeLists.txt  device.cpp  device.h  devicemanager.cpp  devicemanager.h  libsigfeather.cpp  libsigfeather.h  libsigfeather.hpp  sigfeather.cpp  sigfeather.h
host/sftool/: CMakeLists.txt  main.cpp
